--- a/src/Views/Widgets/Histories.xaml
+++ b/src/Views/Widgets/Histories.xaml
@@ -97,7 +97,7 @@
                                             </ItemsControl.ItemTemplate>
                                         </ItemsControl>
 
-                                        <TextBlock Text="{Binding Subject}" FontFamily="Consolas,SimSun" FontSize="9pt" Margin="2,0,0,0"/>
+                                        <TextBlock Text="{Binding Subject}" FontFamily="Consolas,Microsoft YaHei UI" FontSize="9pt" Margin="2,0,0,0"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -118,7 +118,7 @@
                         <DataGridTemplateColumn Width="SizeToCells" MinWidth="56" IsReadOnly="True">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Committer.Name}" FontFamily="Consolas,SimSun" FontSize="9pt" Margin="0,0,8,0"/>
+                                    <TextBlock Text="{Binding Committer.Name}" FontFamily="Consolas,Microsoft YaHei UI" FontSize="9pt" Margin="0,0,8,0"/>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
