--- a/src/Resources/Styles/ToggleButton.xaml
+++ b/src/Resources/Styles/ToggleButton.xaml
@@ -90,8 +90,8 @@
                         <Path 
                             x:Name="Icon" 
                             Style="{DynamicResource Style.Icon}"
-                            Height="{TemplateBinding Width}"
-                            Width="{TemplateBinding Height}"
+                            Width="{TemplateBinding Width}"
+                            Height="{TemplateBinding Height}"
                             Fill="{TemplateBinding Foreground}"
                             Data="{DynamicResource Icon.Orientation}"
                             RenderTransformOrigin=".5,.5">
@@ -108,6 +108,34 @@
                                     <RotateTransform Angle="0"/>
                                 </Setter.Value>
                             </Setter>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="Style.ToggleButton.CommitGraphMode" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Grid Background="Transparent">
+                        <Path 
+                            x:Name="Icon" 
+                            Style="{DynamicResource Style.Icon}"
+                            Width="{TemplateBinding Width}"
+                            Height="{TemplateBinding Height}"
+                            Fill="{TemplateBinding Foreground}"
+                            Data="{DynamicResource Icon.Curve}"/>
+                    </Grid>
+
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter TargetName="Icon" Property="Data" Value="{DynamicResource Icon.Polyline}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
