--- a/src/Views/Widgets/Histories.xaml
+++ b/src/Views/Widgets/Histories.xaml
@@ -181,9 +181,18 @@
             <!-- Right Top Button -->
             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,6,0,0" Orientation="Horizontal">
                 <ToggleButton
+                    Style="{StaticResource Style.ToggleButton.CommitGraphMode}"
+                    Foreground="{StaticResource Brush.FG2}"
+                    Width="16" Height="16"
+                    ToolTip="{StaticResource Text.Histories.GraphMode}"
+                    IsChecked="{Binding Source={x:Static models:Preference.Instance}, Path=Window.UsePolylineInGraph, Mode=TwoWay}"
+                    Checked="ChangeGraphMode" Unchecked="ChangeGraphMode"/>
+                
+                <ToggleButton
                     Style="{StaticResource Style.ToggleButton.SplitDirection}"
                     Foreground="{StaticResource Brush.FG2}"
                     Width="16" Height="16"
+                    Margin="8,0,0,0"
                     ToolTip="{StaticResource Text.Histories.DisplayMode}"
                     IsChecked="{Binding Source={x:Static models:Preference.Instance}, Path=Window.MoveCommitInfoRight, Mode=TwoWay, Converter={StaticResource InverseBool}}"
                     Checked="ChangeOrientation" Unchecked="ChangeOrientation"/>
