style<Dashboard>: set MaxHeight for local branch tree to enable scrolling when there're so many local branches

--- a/src/Views/Widgets/Dashboard.xaml
+++ b/src/Views/Widgets/Dashboard.xaml
@@ -167,6 +167,7 @@
                     Grid.Row="3"
                     x:Name="localBranchTree"
                     FontFamily="Consolas"
+                    MaxHeight="300"
                     ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                     ScrollViewer.VerticalScrollBarVisibility="Auto"
                     LostFocus="OnTreeLostFocus"
