style<Histories>: show guide directly instead of hiding it in button's tooltip

--- a/src/Resources/Locales/en_US.xaml
+++ b/src/Resources/Locales/en_US.xaml
@@ -261,7 +261,7 @@
     <sys:String x:Key="Text.Histories.Guide_1">1. Select single commit to view detail</sys:String>
     <sys:String x:Key="Text.Histories.Guide_2">2. Select two commits to show differences</sys:String>
     <sys:String x:Key="Text.Histories.Guide_3">3. Select more than 2 commits to count</sys:String>
-    <sys:String x:Key="Text.Histories.Guide_4">4. Try to open context menu with selected commit</sys:String>
+    <sys:String x:Key="Text.Histories.Guide_4">4. Open context menu to see more options</sys:String>
 
     <sys:String x:Key="Text.Init">Initialize Repository</sys:String>
     <sys:String x:Key="Text.Init.Path">Path :</sys:String>
