--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -415,6 +415,9 @@
     <sys:String x:Key="Text.Conflict.Revert">检测到回滚提交冲突！</sys:String>
     <sys:String x:Key="Text.Conflict.Merge">检测到分支合并冲突！</sys:String>
 
+    <sys:String x:Key="Text.Restart.Title">系统提示</sys:String>
+    <sys:String x:Key="Text.Restart.Content">本次配置变更需要在重启后生效，是否立即重启？</sys:String>
+
     <sys:String x:Key="Text.NotConfigured">GIT尚未配置。请打开【偏好设置】配置GIT路径。</sys:String>
     <sys:String x:Key="Text.PathNotFound">路径（{0}）不存在或不可读取!</sys:String>
     <sys:String x:Key="Text.MissingBash">无法找到bash.exe，请确保其在git.exe同目录中！</sys:String>
